--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,37 @@
     tools:context=".view.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:id="@+id/mainTextView"
+        android:layout_width="351dp"
+        android:layout_height="56dp"
+        android:text="This is the main activity's layout WIP"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.082" />
+
+    <Button
+        android:id="@+id/toSessionActivity"
+        android:layout_width="352dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="32dp"
+        android:text="To Session Activity"
+        app:layout_constraintEnd_toEndOf="@+id/mainTextView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/mainTextView"
+        app:layout_constraintTop_toBottomOf="@+id/mainTextView" />
+
+    <Button
+        android:id="@+id/toStatsActivity"
+        android:layout_width="352dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="32dp"
+        android:text="To stats Activity"
+        app:layout_constraintEnd_toEndOf="@+id/mainTextView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/mainTextView"
+        app:layout_constraintTop_toBottomOf="@+id/toSessionActivity" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
