--- a/app/src/main/res/layout/dialogfragment_adduser.xml
+++ b/app/src/main/res/layout/dialogfragment_adduser.xml
@@ -1,23 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:ignore="ExtraText">
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="440dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="55dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="55dp"
+    android:layout_marginEnd="55dp"
+    android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
@@ -32,13 +18,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:hint="Surname" />
+            android:hint="Surname"
+            android:digits="qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCVBNM"/>
 
         <EditText
             android:id="@+id/editTextName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name" />
+            android:hint="Name"
+            android:digits="qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCVBNM"/>
 
         <EditText
             android:id="@+id/editTextAge"
@@ -55,5 +43,3 @@
             android:entries="@array/spinnerItems"/>
 
     </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
