Added comments to new methods

--- a/app/src/main/res/layout/activity_session.xml
+++ b/app/src/main/res/layout/activity_session.xml
@@ -61,7 +61,7 @@
         android:id="@+id/editUserBTN"
         android:layout_width="170dp"
         android:layout_height="60dp"
-        android:text="@string/edit_user_text"
+        android:text="@string/edit_preset_text"
         app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
         app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
         app:layout_constraintHorizontal_bias="1.0"
@@ -73,7 +73,7 @@
         android:id="@+id/addUserBTN"
         android:layout_width="170dp"
         android:layout_height="60dp"
-        android:text="@string/add_user_text"
+        android:text="@string/add_preset_text"
         app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
         app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
         app:layout_constraintHorizontal_bias="0.0"
