--- a/app/src/main/res/layout/activity_end_session.xml
+++ b/app/src/main/res/layout/activity_end_session.xml
@@ -12,10 +12,10 @@
         android:layout_width="270dp"
         android:layout_height="60dp"
         android:layout_marginBottom="4dp"
-        android:text="@string/stop_session"
+        android:text="stop_session"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
