--- a/app/src/main/res/layout/fragment_preset.xml
+++ b/app/src/main/res/layout/fragment_preset.xml
@@ -87,5 +87,18 @@
             app:layout_constraintTop_toBottomOf="@+id/presetSkinTone"
             app:layout_constraintVertical_bias="0.0" />
 
+        <Button
+            android:id="@+id/deleteBTN"
+            android:layout_width="250dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="100dp"
+            android:text="@string/deleteBTN"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/presetConfirmBTN"
+            app:layout_constraintHorizontal_bias="0.513"
+            app:layout_constraintStart_toStartOf="@+id/presetCancelBTN"
+            app:layout_constraintTop_toBottomOf="@+id/presetSkinTone"
+            app:layout_constraintVertical_bias="0.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
