--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -24,18 +24,17 @@
         android:id="@+id/backBTN"
         android:layout_width="190dp"
         android:layout_height="55dp"
+        android:layout_marginBottom="32dp"
         android:text="@string/backBTN"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.071"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listOfPresets"
-        app:layout_constraintVertical_bias="0.448" />
+        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listOfPresets"
-        android:layout_width="380dp"
-        android:layout_height="580dp"
+        android:layout_width="376dp"
+        android:layout_height="511dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
