--- a/app/src/main/res/layout/activity_session.xml
+++ b/app/src/main/res/layout/activity_session.xml
@@ -49,35 +49,33 @@
         android:id="@+id/startStopSessionBTN"
         android:layout_width="270dp"
         android:layout_height="60dp"
-        android:layout_marginTop="584dp"
+        android:layout_marginBottom="72dp"
         android:text="@string/start_session_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
-        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
-        app:layout_constraintTop_toBottomOf="@+id/sessionActivityTextView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView" />
 
     <Button
         android:id="@+id/editUserBTN"
         android:layout_width="170dp"
         android:layout_height="60dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="52dp"
         android:text="@string/edit_preset_text"
         app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
-        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
-        app:layout_constraintTop_toBottomOf="@+id/sessionUserDisplayRV"
-        app:layout_constraintVertical_bias="0.449" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.157"
+        app:layout_constraintStart_toEndOf="@+id/addUserBTN" />
 
     <Button
         android:id="@+id/addUserBTN"
         android:layout_width="170dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="52dp"
         android:text="@string/add_preset_text"
         app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
         app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
-        app:layout_constraintTop_toBottomOf="@+id/sessionUserDisplayRV"
-        app:layout_constraintVertical_bias="0.449" />
+        app:layout_constraintHorizontal_bias="0.035"
+        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
