--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,21 +45,11 @@
         android:layout_width="206dp"
         android:layout_height="47dp"
         android:layout_marginTop="68dp"
-        android:text="Connect to sensor"
+        android:text="Default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toStatsActivity"
         app:layout_constraintVertical_bias="0.788" />
-
-    <TextView
-        android:id="@+id/sensorTextView"
-        android:layout_width="223dp"
-        android:layout_height="51dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/connectBTN"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toStatsActivity" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
