--- a/app/src/main/res/layout/activity_session.xml
+++ b/app/src/main/res/layout/activity_session.xml
@@ -7,6 +7,16 @@
     android:windowSoftInputMode="adjustResize"
     tools:context=".view.SessionActivity">
 
+    <Button
+        android:id="@+id/endSessionBTN"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="32dp"
+        android:text="@string/end_session_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/sessionActivityTextView"
         android:layout_width="match_parent"
@@ -34,72 +44,109 @@
         app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
         app:layout_constraintTop_toBottomOf="@+id/sessionActivityTextView" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/sessionUserDisplayRV"
-        android:layout_width="329dp"
-        android:layout_height="347dp"
-        app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
-        app:layout_constraintEnd_toEndOf="@+id/sessionStatusTextView"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="@+id/sessionStatusTextView"
-        app:layout_constraintTop_toBottomOf="@+id/sessionStatusTextView"
-        app:layout_constraintVertical_bias="0.0" />
+    <TextView
+        android:id="@+id/timeRemainingTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="148dp"
+        android:layout_marginEnd="8dp"
+        android:minHeight="48dp"
+        android:text="@string/time_remaining"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
+        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
+        app:layout_constraintTop_toBottomOf="@+id/sessionActivityTextView" />
+
+    <TextView
+        android:id="@+id/notificationTierTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="8dp"
+        android:minHeight="48dp"
+        android:text="@string/notification_tier"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
+        app:layout_constraintHorizontal_bias="0.937"
+        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
+        app:layout_constraintTop_toBottomOf="@+id/sessionActivityTextView" />
 
     <Button
-        android:id="@+id/startStopSessionBTN"
-        android:layout_width="270dp"
+        android:id="@+id/startPauseSessionBTN"
+        android:layout_width="170dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
         android:text="@string/start_session_text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/endSessionBTN" />
 
     <Button
         android:id="@+id/editUserBTN"
         android:layout_width="170dp"
         android:layout_height="60dp"
         android:layout_marginStart="36dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/edit_preset_text"
-        app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
+        app:layout_constraintBottom_toTopOf="@+id/startPauseSessionBTN"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.157"
-        app:layout_constraintStart_toEndOf="@+id/addUserBTN" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/addPresetBTN"
+        app:layout_constraintTop_toBottomOf="@+id/SendNotification"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/addUserBTN"
+        android:id="@+id/addPresetBTN"
         android:layout_width="170dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/add_preset_text"
-        app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
+        app:layout_constraintBottom_toTopOf="@+id/startPauseSessionBTN"
         app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
-        app:layout_constraintHorizontal_bias="0.035"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView" />
+
 
     <EditText
         android:id="@+id/user_input_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="360dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="16dp"
         android:hint="Enter UV Index (1-11+)"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/SendNotification"
         app:layout_constraintEnd_toEndOf="@+id/SendNotification"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/SendNotification" />
-
 
     <Button
         android:id="@+id/SendNotification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="288dp"
+        android:layout_marginBottom="216dp"
         android:text="Send Notification"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/countdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/default_clock"
+        android:textColor="@color/black"
+        android:textSize="60sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timeRemainingTV" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
