--- a/app/src/main/res/layout/fragment_preset.xml
+++ b/app/src/main/res/layout/fragment_preset.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:text="@string/add_preset_fragment"
+            android:text="@string/create_preset"
             android:textSize="25dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
