completed stats page (sprint 3), to test realtime change in minute graph

--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -335,8 +335,8 @@
 
             <TextView
                 android:id="@+id/date_text_view"
-                android:layout_width="111dp"
-                android:layout_height="21dp"
+                android:layout_width="116dp"
+                android:layout_height="26dp"
                 android:text="Your Statistics"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/stats_color"
@@ -386,10 +386,24 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.071"
+                app:layout_constraintHorizontal_bias="0.069"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/line_chart"
-                app:layout_constraintVertical_bias="0.039" />
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/lightIntensityID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Light Intensity:"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/uvindex_id"
+                app:layout_constraintTop_toBottomOf="@+id/uvindex_id"
+                app:layout_constraintVertical_bias="0.097" />
 
             <TextView
                 android:id="@+id/severity_id"
@@ -400,10 +414,24 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.078"
+                app:layout_constraintHorizontal_bias="0.065"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/uvindex_id"
-                app:layout_constraintVertical_bias="0.156" />
+                app:layout_constraintVertical_bias="0.357" />
+
+
+            <TextView
+                android:id="@+id/severity_index"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.086"
+                app:layout_constraintStart_toEndOf="@+id/severity_id"
+                app:layout_constraintTop_toBottomOf="@+id/lightIntensityID"
+                app:layout_constraintVertical_bias="0.116" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
