--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -335,16 +335,15 @@
 
             <TextView
                 android:id="@+id/date_text_view"
-                android:layout_width="116dp"
-                android:layout_height="26dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:text="Your Statistics"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/stats_color"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.946"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.331" />
         </androidx.constraintlayout.widget.ConstraintLayout>
