--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -49,7 +49,7 @@
         android:layout_width="206dp"
         android:layout_height="47dp"
         android:layout_marginBottom="96dp"
-        android:text="Connect to sensor"
+        android:text="@string/connect_sensor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
