--- a/app/src/main/res/layout/activity_session.xml
+++ b/app/src/main/res/layout/activity_session.xml
@@ -90,16 +90,13 @@
         android:layout_width="170dp"
         android:layout_height="60dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="84dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
         android:text="@string/edit_preset_text"
         app:layout_constraintBottom_toTopOf="@+id/startPauseSessionBTN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/addPresetBTN"
-        app:layout_constraintTop_toBottomOf="@+id/SendNotification"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/addPresetBTN" />
 
     <Button
         android:id="@+id/addPresetBTN"
@@ -113,30 +110,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView" />
 
-
-    <EditText
-        android:id="@+id/user_input_edit_text"
-        android:layout_width="360dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="16dp"
-        android:hint="Enter UV Index (1-11+)"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/SendNotification"
-        app:layout_constraintEnd_toEndOf="@+id/SendNotification"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/SendNotification" />
-
-    <Button
-        android:id="@+id/SendNotification"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="216dp"
-        android:text="Send Notification"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/countdown"
